--- a/styles/index.css
+++ b/styles/index.css
@@ -17,7 +17,6 @@ a {
 }
 
 body {
-  background-image: url(city2.jpg);
+  background-image: url(../images/city2.jpg);
   background-size: 100%;
-
 }
