--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,125 +1,92 @@
-/* General Styles */
-html{
-   background:url(http://phutora.com/img/friends3.jpg) no-repeat;
-   background-size: cover;
-   height:100%;
-   background-color: #000;
-}
-* {
-   box-sizing:border-box;
-   -webkit-box-sizing:border-box;
-   -moz-box-sizing:border-box;
-   -webkit-font-smoothing:antialiased;
-   -moz-font-smoothing:antialiased;
-   -o-font-smoothing:antialiased;
-   font-smoothing:antialiased;
-   text-rendering:optimizeLegibility;
-}
-body {
-   color: #C0C0C0;
-   font-family: Arial, san-serif;
+@import "compass/css3";
+
+@import url(https://fonts.googleapis.com/css?family=Merriweather);
+$red: #e74c3c;
+
+*,
+*:before,
+*:after {
+   @include box-sizing(border-box);
 }
 
+html, body {
+  background: #f1f1f1;
+  font-family: 'Merriweather', sans-serif;
+  padding: 1em;
+}
 
-/* Contact Form Styles */
 h1 {
-   margin: 10px 0 0 0;
-}
-h4{
-   margin: 0 0 20px 0;
-}
-#contact-form {
-   background-color:rgba(72,72,72,0.7);
-   padding: 10px 20px 30px 20px;
-   max-width:100%;
-   float: left;
-   left: 50%;
-   position: absolute;
-   margin-top:30px;
-   margin-left: -260px;
-   border-radius:7px;
-   -webkit-border-radius:7px;
-   -moz-border-radius:7px;
-}
-#contact-form input,
-#contact-form select,
-#contact-form textarea,
-#contact-form label {
-   font-size: 15px;
-   margin-bottom: 2px;
-   font-family: Arial, san-serif;
-}
-#contact-form input,
-#contact-form select,
-#contact-form textarea {
-   width:100%;
-   background: #fff;
-   border: 0;
-   -moz-border-radius: 4px;
-   -webkit-border-radius: 4px;
-   border-radius: 4px;
-   margin-bottom: 25px;
-   padding: 5px;
-}
-#contact-form input:focus,
-#contact-form select:focus,
-#contact-form textarea:focus {
-   background-color: #E5E6E7;
-}
-#contact-form textarea {
-   width:100%;
-   height: 150px;
-}
-#contact-form button[type="submit"] {
-   cursor:pointer;
-   width:100%;
-   border:none;
-   background:#991D57;
-   background-image:linear-gradient(bottom, #8C1C50 0%, #991D57 52%);
-   background-image:-moz-linear-gradient(bottom, #8C1C50 0%, #991D57 52%);
-   background-image:-webkit-linear-gradient(bottom, #8C1C50 0%, #991D57 52%);
-   color:#FFF;
-   margin:0 0 5px;
-   padding:10px;
-   border-radius:5px;
-}
-#contact-form button[type="submit"]:hover {
-   background-image:linear-gradient(bottom, #9C215A 0%, #A82767 52%);
-   background-image:-moz-linear-gradient(bottom, #9C215A 0%, #A82767 52%);
-   background-image:-webkit-linear-gradient(bottom, #9C215A 0%, #A82767 52%);
-   -webkit-transition:background 0.3s ease-in-out;
-   -moz-transition:background 0.3s ease-in-out;
-   transition:background-color 0.3s ease-in-out;
-}
-#contact-form button[type="submit"]:active {
-   box-shadow:inset 0 1px 3px rgba(0,0,0,0.5);
-}
-input:required, textarea:required {
-   box-shadow: none;
-   -moz-box-shadow: none;
-   -webkit-box-shadow: none;
-   -o-box-shadow: none;
-}
-#contact-form .required {
-   font-weight:bold;
-   color: #E5E6E7;
+   text-align: center;
+   color: #a8a8a8;
+   @include text-shadow(1px 1px 0 rgba(white, 1));
 }
 
-/* Hide success/failure message
-   (especially since the php is missing) */
-#failure, #success {
-   color: #6EA070;
-   display:none;
+form {
+   max-width: 600px;
+   text-align: center;
+   margin: 20px auto;
+
+  input, textarea {
+     border:0; outline:0;
+     padding: 1em;
+     @include border-radius(8px);
+     display: block;
+     width: 100%;
+     margin-top: 1em;
+     font-family: 'Merriweather', sans-serif;
+     @include box-shadow(0 1px 1px rgba(black, 0.1));
+     resize: none;
+
+    &:focus {
+       @include box-shadow(0 0px 2px rgba($red, 1)!important);
+    }
+  }
+
+  #input-submit {
+     color: white;
+     background: $red;
+     cursor: pointer;
+
+    &:hover {
+       @include box-shadow(0 1px 1px 1px rgba(#aaa, 0.6));
+    }
+  }
+
+  textarea {
+      height: 126px;
+  }
 }
 
-/* Make form look nice on smaller screens */
-@media only screen and (max-width: 580px) {
-   #contact-form{
-      left: 3%;
-      margin-right: 3%;
-      width: 88%;
-      margin-left: 0;
-      padding-left: 3%;
-      padding-right: 3%;
-   }
+
+.half {
+  float: left;
+  width: 48%;
+  margin-bottom: 1em;
+}
+
+.right { width: 50%; }
+
+.left {
+     margin-right: 2%;
+}
+
+
+@media (max-width: 480px) {
+  .half {
+     width: 100%;
+     float: none;
+     margin-bottom: 0;
+  }
+}
+
+
+/* Clearfix */
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.cf:after {
+    clear: both;
 }
