--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,4 +1,4 @@
 body {
-  background-image: url(../images/city2.jpg);
+  background-image: url(../images/city2.jpg);no repeat;
   background-size: 100%;
 }
