--- a/styles/index.css
+++ b/styles/index.css
@@ -17,6 +17,6 @@ a {
 }
 
 body {
-  background-image: url(../images/city2.jpg);
+  background-image: url(../images/city2.jpg);no repeat;
   background-size: 100%;
 }
