--- a/styles/about.css
+++ b/styles/about.css
@@ -1,3 +1,22 @@
+.navbar {
+  margin-top: 600px;
+  list-style-type: none;
+  justify-content: center;
+  display: flex;
+  font-weight: bold;
+  }
+
+li {
+  display: inline;
+  margin-right: 50px;
+  margin-top: -550px;
+}
+
+a {
+  color: navy-blue;
+  font-family: gotham;
+}
+
 h1 {
   text-align: center;
 }
