--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,10 +1,12 @@
 body {
   background-image: url(../images/city2.jpg);no repeat;
   background-size: 100%;
+
 }
 
 .container {
   position: relative;
   max-width: 200px;
   margin: 0 auto;
+  width: auto;
 }
